# dbgov

./: .pre-commit-config.yaml  Dockerfile  Makefile  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/dbgov/: __main__.py  logging.py
src/dbgov/adapters/: base.py  factory.py  mysql.py  postgres.py  redshift.py
src/dbgov/commands/: apply.py  plan.py
src/dbgov/models/: grant.py  policy.py
src/dbgov/parser/: policy.py
src/dbgov/reporter/: pr_comment.py
src/dbgov/settings/: config.py
tests/: conftest.py  test_cli_e2e.py  test_mysql.py  test_parser.py  test_postgres.py
tests/fixtures/: analyst-finance.yaml  invalid-no-principal.yaml  principal-analyst.yaml  schema-level.yaml
